--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
               Оставьте свои данные, мы вам перезвоним
             </h1>
             <div class="form-field">
-              <label class="form-lable" for="name">Имя</label>
-              <input class="form-input" name="name" id="name" type="text">                      
-            </div>
-
-            <div class="form-field">
-              <label class="form-lable" for="tel">Телефон</label>
-              <input class="form-input" name="tel" id="tel" type="tel">                      
-            </div>
-
-            <div class="form-field">
-              <label class="form-lable" for="mail">Почта</label>
-              <input class="form-input" name="mail" id="mail" type="email">                      
-            </div>
-
-            <div class="form-field">
-              <label for="comment">Коментарий</label>
-                <textarea class="comment-textarea" name="comment" id="comment" rows="10"placeholder="Введите текст"></textarea>
               
+              <input class="form-input" name="name" id="name" type="text"> 
+              <label class="form-label" for="name">Имя</label>                     
+            </div>
+
+            <div class="form-field">              
+              <input class="form-input" name="tel" id="tel" type="tel"> 
+              <label class="form-label" for="tel">Телефон</label>                     
+            </div>
+
+            <div class="form-field">              
+              <input class="form-input" name="mail" id="mail" type="email">
+              <label class="form-label" for="mail">Почта</label>                      
+            </div>
+
+            <div class="form-field">              
+                <textarea class="comment-textarea" name="comment" id="comment" rows="10"placeholder="Введите текст"></textarea>
+                <label for="comment">Коментарий</label>
             </div>
             <div>
               <input type="checkbox">
