--- a/index.html
+++ b/index.html
@@ -461,6 +461,12 @@
         </div>
         <div class="footer-blok">
           <p class="aside">Подпишитесь на рассылку</p>
+          <form>
+            <div class="form-field-footer">
+              <label class="label-footer" for="mail"></label>                
+              <input class="input-footer" name="mail" placeholder="E-mail" id="mail" type="email">                                  
+            </div>
+          </form>
           <button class="button fly">Подписаться</button>
         </div>
       </div>
