--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button data-modal-close>
-            <img class="modal-close" src="./images/дз4/close.svg">
+            <svg class="modal-close" width="18" height="18">
+              <use xlink:href="./images/дз4/sprite.svg#icon-close"></use>
+            </svg>          
           </button>
           <form class="form-block">
             <h1 class="form-title">
