--- a/index.html
+++ b/index.html
@@ -61,27 +61,35 @@
         <div class="modal">
           <button data-modal-close>
             <svg class="modal-close" width="18" height="18">
-              <use xlink:href="./images/дз4/sprite.svg#icon-close"></use>
+              <use href="./images/дз4/sprite.svg#icon-close"></use>
             </svg>          
           </button>
           <form class="form-block">
             <h1 class="form-title">
               Оставьте свои данные, мы вам перезвоним
             </h1>
-            <div class="form-field">
-              
+            <div class="form-field">              
               <input class="form-input" name="name" id="name" type="text"> 
-              <label class="form-label" for="name">Имя</label>                     
+              <label class="form-label" for="name">Имя</label>
+              <svg class="icon-modal" width="12" height="12">
+                <use href="./images/дз4/sprite.svg#icon-name"></use>
+              </svg>                         
             </div>
 
             <div class="form-field">              
               <input class="form-input" name="tel" id="tel" type="tel"> 
-              <label class="form-label" for="tel">Телефон</label>                     
+              <label class="form-label" for="tel">Телефон</label>
+              <svg class="icon-modal" width="13" height="13">
+                <use href="./images/дз4/sprite.svg#icon-tel"></use>
+              </svg>                       
             </div>
 
             <div class="form-field">              
               <input class="form-input" name="mail" id="mail" type="email">
-              <label class="form-label" for="mail">Почта</label>                      
+              <label class="form-label" for="mail">Почта</label>
+              <svg class="icon-modal" width="15" height="12">
+                <use href="./images/дз4/sprite.svg#icon-mail"></use>
+              </svg>                        
             </div>
 
             <div class="form-field">              
