--- a/index.html
+++ b/index.html
@@ -68,33 +68,34 @@
             <h1 class="form-title">
               Оставьте свои данные, мы вам перезвоним
             </h1>
-            <div class="form-field">              
-              <input class="form-input" name="name" id="name" type="text"> 
-              <label class="form-label" for="name">Имя</label>
+            <div class="form-field">
+              <label class="form-label" for="name">Имя</label>              
+              <input class="form-input" name="name" id="name" type="text">              
               <svg class="icon-modal" width="12" height="12">
                 <use href="./images/дз4/sprite.svg#icon-name"></use>
               </svg>                         
             </div>
 
-            <div class="form-field">              
-              <input class="form-input" name="tel" id="tel" type="tel"> 
-              <label class="form-label" for="tel">Телефон</label>
+            <div class="form-field">
+              <label class="form-label" for="tel">Телефон</label>              
+              <input class="form-input" name="tel" id="tel" type="tel">              
               <svg class="icon-modal" width="13" height="13">
                 <use href="./images/дз4/sprite.svg#icon-tel"></use>
               </svg>                       
             </div>
 
-            <div class="form-field">              
-              <input class="form-input" name="mail" id="mail" type="email">
-              <label class="form-label" for="mail">Почта</label>
+            <div class="form-field">
+              <label class="form-label" for="mail">Почта</label>              
+              <input class="form-input" name="mail" id="mail" type="email">              
               <svg class="icon-modal" width="15" height="12">
                 <use href="./images/дз4/sprite.svg#icon-mail"></use>
               </svg>                        
             </div>
 
-            <div class="form-field">              
+            <div class="form-field">
+              <label class="form-label" for="comment">Коментарий</label>              
                 <textarea class="comment-textarea" name="comment" id="comment" rows="10"placeholder="Введите текст"></textarea>
-                <label for="comment">Коментарий</label>
+                
             </div>
             <div>
               <input type="checkbox">
