фокус для полей и иконок

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
             </div>
             <div>
               <input type="checkbox">
-              <label for="">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+              <label for="">Соглашаюсь с
+                рассылкой и принимаю <a href="">Условия договора</a></label>
             </div>
             <div>
               <button type="submit" class="btn-modal">Отправить</button>
