выровняла кнопку в футере

--- a/index.html
+++ b/index.html
@@ -468,17 +468,16 @@
           </ul>
         </div>
         <div class="footer-blok">
-          <form>
-          <p class="aside">Подпишитесь на рассылку</p>          
+          <p class="aside">Подпишитесь на рассылку</p>   
+          <form class="button-form" >                
             <div class="form-field-footer">
               <label class="label-footer" for="mail"></label>                
               <input class="input-footer" name="mail" placeholder="E-mail" id="mail" type="email">                                  
             </div>
-          </form>
-          <button class="button fly">Подписаться</button>
-        </div>
+            <button class="button fly">Подписаться</button>
+            </form>
+
       </div>
     </footer>
     <script src="./js/modal.js"></script>
   </body>
-</html>
