--- a/portfolio.html
+++ b/portfolio.html
@@ -289,9 +289,16 @@
               </ul>
             </div>
             <div class="footer-blok">
-              <p class="aside">Подпишитесь на рассылку</p>
-              <button class="button fly">Подписаться</button>
-            </div>
+              <p class="aside">Подпишитесь на рассылку</p>   
+              <form class="button-form" >                
+                <div class="form-field-footer">
+                  <label class="label-footer" for="mail"></label>                
+                  <input class="input-footer" name="mail" placeholder="E-mail" id="mail" type="email">                                  
+                </div>
+                <button class="button fly">Подписаться</button>
+                </form>
+    
+          </div>
       </div>   
     </footer>
   </body>
