--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
                 
             </div>
             <div>
-              <input type="checkbox">
-              <label for="">Соглашаюсь с
-                рассылкой и принимаю <a href="">Условия договора</a></label>
-            </div>
+              <label class="checkbox-label">
+                <input type="checkbox" name="checkbox" class="checkbox">
+                <svg class="checkbox-icon">
+                  <use href="./images/дз4/sprite.svg#icon-check"></use>
+                </svg>
+                <span>Соглашаюсь с рассылкой и принимаю
+                  <a href="#"> Условия договора</a></span></label>
             <div>
               <button type="submit" class="btn-modal">Отправить</button>
             </div>
