--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             
           </li>
           <li>
-            <a class="menu-item" href="tell:+380961111111">
+            <a class="menu-item" href="tel:+380961111111">
               <svg class="icon-smartphone"  width="10" height="15">
                 <use href="./images/дз4/sprite.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11
