изменила растояние до футера в веб

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <section class="features">
         <div class="conteiner">
-          <h2 class="hidden">Особенности</h2>`
+          <h2 class="hidden">Особенности</h2>
           <ul class="section">
             <li>
               <div class="features-block">
@@ -203,7 +203,7 @@
       <section class="user">
         <div class="conteiner">
           <h2 class="subtitle">Наша команда</h2>
-          <ul class="section our-team">
+          <ul class="our-team">
             <li class="our-items">
               <img
                 src="./images/дз4/новый макет/Игорь1.jpg"
@@ -364,10 +364,10 @@
         </div>
       </section>
       <!--Постоянные клиенты-->
-      <section class="section">
+      <section class="clients ">
         <div class="conteiner">
           <h2 class="subtitle">Постоянные клиенты</h2>
-          <ul class="section regular-client">
+          <ul class="client-section">
             <li class="clients-list">
               <a href="" class="client-sprite">
                 <svg class="client-icon" width="44" height="49" >
