--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <section class="features">
         <div class="conteiner">
-          <h2 class="hidden">Особенности</h2>
+          <!--<h2 class="hidden">Особенности</h2>-->
           <ul class="section">
             <li>
               <div class="features-block">
