--- a/index.html
+++ b/index.html
@@ -424,17 +424,10 @@
             >
           </p>
           <address class="address">
-            <ul class="block-padding">
-              <li class="contacts">
-                <a href=""></a>г. Киев, пр-т Леси Украинки, 26
-              </li>
-              <li class="contacts-item">
-                <a href="mailto:info@example.com">info@example.com</a>
-              </li>
-              <li class="contacts-item">
-                <a href="tel:+380991111111"></a>+38 099 111 11 11
-              </li>
-            </ul>
+            <a href="#"class="contacts">г. Киев, пр-т Леси Украинки, 26</a>
+                  <br><a class="contacts-item" href="mailto:info@example.com">info@example.com</a></br>
+                  <a class="contacts-item" href="tel:+380991111111">+38 099 111 11</a>
+               
           </address>
         </div>
         <div class="footer-blok">
