--- a/portfolio.html
+++ b/portfolio.html
@@ -251,7 +251,7 @@
                
                   <a href=""class="contacts">г. Киев, пр-т Леси Украинки, 26</a>
                   <br><a class="contacts-item" href="mailto:info@example.com">info@example.com</a></br>
-                  <a class="contacts-item" href="tel:+380991111111">+38 099 111 11</a>
+                  <a class="contacts-item" href="tel:+380991111111">+38 099 111 11 11</a>
                
               </address>
             </div>
