--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
           </p>
           <address class="address">
             <a href="#"class="contacts">г. Киев, пр-т Леси Украинки, 26</a>
-                  <br><a class="contacts-item" href="mailto:info@example.com">info@example.com</a></br>
-                  <a class="contacts-item" href="tel:+380991111111">+38 099 111 11</a>
+            <a class="contacts-item" href="mailto:info@example.com">info@example.com</a>
+            <a class="contacts-item" href="tel:+380991111111">+38 099 111 11 11</a>
                
           </address>
         </div>
