--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <!--Портфолио-->
     <main>
       <section class="section">
-        <h1 class="caption">Портфолио</h1>
+<!--<h1 class="caption">Портфолио</h1>-->
         <div class="container">
              <ul class="menu-button container-filter">
                 <li><button class="btn" type="button">Все</button></li>
